# docs/swagger.json
@@ -237,6 +237,13 @@
                         "required": true
                     },
                     {
+                        "enum": [
+                            1,
+                            2,
+                            3,
+                            4,
+                            96
+                        ],
                         "type": "integer",
                         "description": "数据间隔值,表示多少个15分钟, 如:1表示15分钟间隔 2表示30分钟间隔 3表示45分钟间隔 ,96表示1天间隔 ；",
                         "name": "interval",
@@ -1295,9 +1302,9 @@
                 }
             }
         },
-        "/pub/stock/market_status": {
+        "/pub/stock/market_status/{timestamp}": {
             "get": {
-                "description": "获取美股市场开盘状态",
+                "description": "获取美股市场开盘状态,支持节假日,夏令时",
                 "consumes": [
                     "application/json"
                 ],
@@ -1315,7 +1322,7 @@
                         "default": 0,
                         "description": "unix 秒数； 0表示当前时间",
                         "name": "timestamp",
-                        "in": "query"
+                        "in": "path"
                     }
                 ],
                 "responses": {
